Day 5/lab5_q3_EKS_Hand_On/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: aws-lab5

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: aws-lab5
  name: the-deployment
spec:
  selector:
    matchLabels:
      app: webapp
  replicas: 2
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - image: nginx:latest
        name: the-app
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: aws-lab5
  name: the-service
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
  selector:
    app: webapp
